[project]
name = "monarch-ingest-commons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Patrick Golden", email = "ptgolden@email.unc.com" }
]
requires-python = ">=3.10"
dependencies = [
    "jedi>=0.19.2",
    "libcst>=1.7.0",
    "typer>=0.15.2",
]

[project.scripts]
monarch-ingest-commons = "monarch_ingest_commons:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "biolink-model>=4.2.5",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.ruff]
lint.extend-ignore = [
    "S101",  # use of assert
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]

# Select or ignore from https://beta.ruff.rs/docs/rules/
lint.select = [
    "B",  # bugbear
    # "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "S",  # flake8-bandit
    "W",  # Warning
    "ANN",  # flake8-annotations
]

lint.unfixable = []
line-length = 120
target-version = "py310"
